--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -1,9 +1,10 @@
+{% load static %}
 <div id="header">
     <nav class="navbar navbar-expand-md navbar-light shadow-sm">
         <div class="container">
             <a class="navbar-brand app-name" href="/">
                 <div class="logo d-flex align-items-center">
-                    <img class="logo_img me-1" src="assets/images/logo.png" alt="nagoyameshi">
+                    <img class="logo_img me-1" src="{% static 'assets/images/logo.png' %}" alt="nagoyameshi">
                     <h1>NAGOYAMESHI</h1>
                 </div>
             </a>
