--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -14,15 +14,22 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav row ms-auto">
-                    <!-- <li class="nav-item">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
                         <a class="nav-link" href="/">マイページ</a>
-                    </li> -->
+                    </li>
+                    <!-- 後々はマイページの中に入れる -->
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">ログイン</a>
+                        <a class="nav-link" href="/logout/">ログアウト</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup/">新規登録</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/signup">新規登録</a>
+                        <a class="nav-link" href="/login/">ログイン</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
