--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -15,7 +15,7 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="form-group row mb-3">
-                    <label for="name" class="col-md-5 col-form-label text-md-left fw-bold">
+                    <label for="username" class="col-md-5 col-form-label text-md-left fw-bold">
                         <div class="d-flex align-items-center">
                             <span class="me-1">氏名</span>
                             <!-- <span class="badge bg-danger">必須</span> -->
@@ -23,8 +23,8 @@
                     </label>
 
                     <div class="col-md-7">
-                        <input type="text" class="form-control" id="name" name="name" value="" required
-                            autocomplete="name" autofocus placeholder="侍 太郎">
+                        <input type="text" class="form-control" id="username" name="username" value="" required
+                            autocomplete="username" autofocus placeholder="侍 太郎">
                     </div>
                 </div>
 
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="form-group row mb-3">
-                    <label for="password" class="col-md-5 col-form-label text-md-left fw-bold">
+                    <label for="password1" class="col-md-5 col-form-label text-md-left fw-bold">
                         <div class="d-flex align-items-center">
                             <span class="me-1">パスワード</span>
                             <!-- <span class="badge bg-danger">必須</span> -->
@@ -154,25 +154,31 @@
                     </label>
 
                     <div class="col-md-7">
-                        <input id="password" type="password" class="form-control" name="password" required
+                        <input id="password1" type="password" class="form-control" name="password1" required
                             autocomplete="new-password">
+                        {% for error in form.password1.errors %}
+                            <p class="text-danger small">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
-<!-- 
+
                 <div class="form-group row mb-3">
-                    <label for="password-confirm" class="col-md-5 col-form-label text-md-left fw-bold">
+                    <label for="password2" class="col-md-5 col-form-label text-md-left fw-bold">
                         <div class="d-flex align-items-center">
                             <span class="me-1">パスワード（確認用）</span>
-                            <span class="badge bg-danger">必須</span>
+                            <!-- <span class="badge bg-danger">必須</span> -->
                         </div>
                     </label>
 
                     <div class="col-md-7">
-                        <input id="password-confirm" type="password" class="form-control" name="password_confirmation"
+                        <input id="password2" type="password" class="password2" name="password2"
                             required autocomplete="new-password">
+                        {% for error in form.password2.errors %}
+                            <p class="text-danger small">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
--->
+
 
                 <hr class="my-4">
 
