--- a/templates/snippets/shop_box.html
+++ b/templates/snippets/shop_box.html
@@ -8,7 +8,7 @@
         </div>
         <p class="card-text">
             <span class="star-rating me-1" data-rate="4"></span>
-            4.13
+            4.13 =sample=
         </p>
     </div>
 </div>
