--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div id="header">
-    <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
             <a class="navbar-brand app-name" href="/">
                 <div class="logo d-flex align-items-center">
