--- a/templates/snippets/shop_box.html
+++ b/templates/snippets/shop_box.html
@@ -1,4 +1,4 @@
-<a href="/shops/{{ object.pk }}" class="link-dark card-link">
+<a href="/restaurants/{{ object.pk }}" class="link-dark card-link">
 <div class="card h-100">
     <img src="/{{ object.image }}" class="card-img-top vertical-card-image">
     <div class="card-body">
