--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -25,7 +25,7 @@
 <div class="search bgbge">
     <h2 class="search_ttl"><img src="./static/assets/images/img_icon01.png" alt="">SEARCH</h2>
     <span class="search_subttl">お店を探す</span>
-    <form method="GET" action="{% url 'restaurants' %}" class="user-search-box">
+    <form method="GET" action="{% url 'restaurants_list' %}" class="user-search-box">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="店舗名・エリア・カテゴリ" name="keyword"  value="{{ request.GET.keyword }}">
             <button type="submit" class="btn search_btn shadow-sm">検索</button>
@@ -40,7 +40,7 @@
         <hr class="mb-4 mx-auto" style="border-top: 3px dotted #bfb9aa;width: 70px;">
         <div class="row row-cols-xl-6 row-cols-md-3 row-cols-2 g-1 mb-2">
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=1" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=1" class="card-link">
                     <div class="card">
                         <img src="https://nagoyameshi-pattern-1.herokuapp.com/images/don.jpg" class="card-img vertical-card-image" alt="丼物">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -50,7 +50,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=2" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=2" class="card-link">
                     <div class="card text-white">
                         <img src="https://nagoyameshi-pattern-1.herokuapp.com/images/udon.jpg" class="card-img vertical-card-image" alt="うどん">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=3" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=3" class="card-link">
                     <div class="card text-white">
                         <img src="https://nagoyameshi-pattern-1.herokuapp.com/images/ramen.jpg" class="card-img vertical-card-image" alt="ラーメン">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -70,7 +70,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=4" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=4" class="card-link">
                     <div class="card text-white">
                         <img src="img_item04.jpg" class="card-img vertical-card-image" alt="味噌カツ">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -80,7 +80,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=5" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=5" class="card-link">
                     <div class="card text-white">
                         <img src="https://nagoyameshi-pattern-1.herokuapp.com/images/fried.jpg" class="card-img vertical-card-image" alt="揚げ物">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -90,7 +90,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?category_id=6" class="card-link">
+                <a href="{% url 'restaurants_list' %}?category_id=6" class="card-link">
                     <div class="card text-white">
                         <img src="img_item06" class="card-img vertical-card-image" alt="モーニング">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -101,11 +101,11 @@
             </div>
         </div>
             <!-- {% for category in categories %} -->
-            <a href="{% url 'restaurants' %}?category_id=7" class="btn item_btn">味噌煮込みうどん</a>
-            <a href="{% url 'restaurants' %}?category_id=8" class="btn item_btn">カレーうどん</a>
-            <a href="{% url 'restaurants' %}?category_id=9" class="btn item_btn">あんかけスパゲティ</a>
-            <a href="{% url 'restaurants' %}?category_id=10" class="btn item_btn">鉄板ナポリタン</a>
-            <a href="{% url 'restaurants' %}?category_id=11" class="btn item_btn">天むす</a>
+            <a href="{% url 'restaurants_list' %}?category_id=7" class="btn item_btn">味噌煮込みうどん</a>
+            <a href="{% url 'restaurants_list' %}?category_id=8" class="btn item_btn">カレーうどん</a>
+            <a href="{% url 'restaurants_list' %}?category_id=9" class="btn item_btn">あんかけスパゲティ</a>
+            <a href="{% url 'restaurants_list' %}?category_id=10" class="btn item_btn">鉄板ナポリタン</a>
+            <a href="{% url 'restaurants_list' %}?category_id=11" class="btn item_btn">天むす</a>
             <!-- {% endfor %} -->
         </div>
     </div>
@@ -119,7 +119,7 @@
         <hr class="mb-4 mx-auto" style="border-top: 3px dotted #bfb9aa;width: 70px;">
         <div class="row row-cols-xl-6 row-cols-md-3 row-cols-2 g-2 mb-2">
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=1" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=1" class="card-link">
                     <div class="card">
                         <img src="img_eria01.jpg" class="card-img vertical-card-image">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -129,7 +129,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=2" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=2" class="card-link">
                     <div class="card text-white">
                         <img src="img_eria02.jpg" class="card-img vertical-card-image">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -139,7 +139,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=3" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=3" class="card-link">
                     <div class="card text-white">
                         <img src="img_eria03.jpg" class="card-img vertical-card-image">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -149,7 +149,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=4" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=4" class="card-link">
                     <div class="card text-white">
                         <img src="img_eria04.jpg" class="card-img vertical-card-image">
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -159,7 +159,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=5" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=5" class="card-link">
                     <div class="card text-white">
                         <img src="img_eria05.jpg" class="card-img vertical-card-image" >
                         <div class="card-img-overlay d-flex justify-content-center align-items-center overlay-background">
@@ -169,7 +169,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'restaurants' %}?tag_id=6" class="card-link">
+                <a href="{% url 'restaurants_list' %}?tag_id=6" class="card-link">
                     <div class="card text-white">
                         <img src="img_eria06" class="card-img vertical-card-image">
                         <div class="card-img-overlay text-align-center d-flex justify-content-center align-items-center overlay-background">
@@ -182,10 +182,10 @@
 
         <div class="item_link mb-5">
             <!-- {% for tag in tags %} -->
-            <a href="{% url 'restaurants' %}?tag_id=7" class="item_btn">岡崎市</a>
-            <a href="{% url 'restaurants' %}?tag_id=8" class="btn item_btn">鶴舞</a>
-            <a href="{% url 'restaurants' %}?tag_id=9" class="btn item_btn">金山</a>
-            <a href="{% url 'restaurants' %}?tag_id=10" class="btn item_btn">国際センター・円頓寺</a>
+            <a href="{% url 'restaurants_list' %}?tag_id=7" class="item_btn">岡崎市</a>
+            <a href="{% url 'restaurants_list' %}?tag_id=8" class="btn item_btn">鶴舞</a>
+            <a href="{% url 'restaurants_list' %}?tag_id=9" class="btn item_btn">金山</a>
+            <a href="{% url 'restaurants_list' %}?tag_id=10" class="btn item_btn">国際センター・円頓寺</a>
             <!-- {% endfor %} -->
         </div>
     </div>
