--- a/templates/pages/restaurants_detail.html
+++ b/templates/pages/restaurants_detail.html
@@ -6,18 +6,18 @@
 
 <nav class="my-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a href="https://nagoyameshi-pattern-1.herokuapp.com">ホーム</a></li>
-                    <li class="breadcrumb-item"><a href="https://nagoyameshi-pattern-1.herokuapp.com/restaurants">店舗一覧</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'index' %}">HOME</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'restaurants_list' %}">店舗一覧</a></li>
                     <li class="breadcrumb-item active" aria-current="page">店舗詳細</li>
                 </ol>
 </nav>
 <div class="container pb-5">  
 
         <!-- 1. 店名 -->
-        <h1 class="mt-3 mb-2 text-center">台湾ラーメン 田中 守山本店</h1>
+        <h1 class="mt-5 mb-2 text-center">{{ shop.name }}</h1>
         <!-- 2. ★評価 -->
-        <p class="text-center mb-4">
-            <span class="star-rating me-1" data-rate="5"></span>
+        <p class="text-center mb-2">
+            <span class="star-rating" data-rate="5"></span>
             5（1件）
         </p>
 
@@ -45,105 +45,95 @@
 
                 <!-- 4. 写真 -->
                 <div class="mb-4">
-                    <img src="https://nagoyameshi-pattern-1.herokuapp.com/storage/restaurants/ramen02.jpg" class="w-100">
+                    <img src="{{ shop.image }}" class="w-100">
                 </div>
 
                 <div class="p-3 mb-4">
-                    <p>名古屋老舗のお店。老舗の味をご堪能ください。</p>
+                    <p>{{ shop.description|linebreaksbr }}</p>
                 </div>
         </div>
     </div>
     <!-- 5. タブ切り替え「店舗情報」「レビュー」 -->
     <ul class="nav nav-tabs" id="detailTabs" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link bg-secondary active" href="https://nagoyameshi-pattern-1.herokuapp.com/restaurants/107/reservations/create">店舗情報</a>
+            <a class="nav-link bg-light active" href="https://nagoyameshi-pattern-1.herokuapp.com/restaurants/107/reservations/create">店舗情報</a>
         </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link link-dark" href="https://nagoyameshi-pattern-1.herokuapp.com/restaurants/107/reviews">レビュー</a>
+        <li class="nav-item " role="presentation">
+            <a class="nav-link border" href="https://nagoyameshi-pattern-1.herokuapp.com/restaurants/107/reviews">レビュー</a>
         </li>
     </ul>
 
     <div class="tab-content border border-top-0 p-4 mb-4" id="detailTabsContent">
         <!-- 店舗情報タブの内容 (デフォルトで表示) -->
         <div class="tab-pane fade show active" id="info" role="tabpanel" aria-labelledby="info-tab">
-            <div class="container ps-0 pe-0">
+            <div class="" style="width: 90%; margin: 10px auto;">
+                <div class="flex mb-4">
+                    <span class="item_btn me-2">#{{shop.category}}</span>
+                    
+                    {% for tag in shop.tags.all %}
+                    <span class="item_btn me-2">#{{ tag.name }}</span>
+                    {% endfor %}
+                </div>
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <MapPin className="w-5 h-5 text-amber-700 mt-1 flex-shrink-0" />
-                        <span class="fw-bold">住所</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">住所</span>
                     </div>
                     <div class="col">
-                        <span>愛知県名古屋市中区栄X-XX-XX</span>
+                        <span>{{ shop.address }}</span>
                     </div>
                 </div>
 
                 
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <span class="fw-bold">電話番号</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">電話番号</span>
                     </div>
                     <div class="col">
-                        <a href="tel:05223456789" class="btn item_btn">052-2345-6789</a>
+                        <a href="tel:{{ shop.tel }}" class="text-primary">{{ shop.tel }}</a>
                     </div>
                 </div>
                 
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <span class="fw-bold">営業時間</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">営業時間</span>
                     </div>
                     <div class="col">
-                        <span>7:30～17:30</span>
+                        <span>{{ shop.opening_hours|linebreaksbr }}</span>
                     </div>
                 </div>
 
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <span class="fw-bold">定休日</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">定休日</span>
                     </div>
                     <div class="col d-flex">
                         <div>
-                            不定休
+                            {{ shop.holiday|linebreaksbr }}
                         </div>
                     </div>
                 </div>
 
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <span class="fw-bold">座席数</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">座席数</span>
                     </div>
                     <div class="col">
-                        <span>43席</span>
+                        <span>{{ shop.seating_capacity|linebreaksbr }}</span>
                     </div>
                 </div>
 
                 <div class="row pb-2 mb-2 border-bottom">
-                    <div class="col-2">
-                        <span class="fw-bold">価格帯</span>
+                    <div class="col-md-2 col-sm-4 my-1">
+                        <span class="fw-bold" style="font-weight: bold;color: #4c3725;">価格帯</span>
                     </div>
                     <div class="col">
-                        <span>500円～1,000円</span>
+                        <span>{{ shop.price }}</span>
                     </div>
-                </div>
-
-
-                <div class="flex flex-wrap gap-2 mb-5">
-                    <span class="item_btn">
-                    <!-- {shop.category} -->
-                    # ラーメン
-                    </span>
-                    <span class="item_btn">
-                    <!-- {shop.area} -->
-                    # 栄
-                    </span>
-                    <span class="item_btn">
-                    <!-- {shop.price_range} -->
-                    # 伏見・丸の内
-                    </span>
                 </div>
             </div>
 
-            <div class="mb-5">
-                <form action="https://nagoyameshi-pattern-1.herokuapp.com/favorites/103" method="post" class="text-center">
+            <div class="mt-4 mb-3">
+                <form action="/" method="post" class="text-center">
                     <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
                     <button type="submit" class="btn btn-outline-danger shadow-sm w-50">♥ お気に入り追加</button>
                 </form>
