--- a/templates/pages/account_mypage.html
+++ b/templates/pages/account_mypage.html
@@ -33,7 +33,7 @@
                     </a>
                     
                     <!-- 3. お気に入り一覧 -->
-                    <a href="/favorites" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <a href="{% url 'favorites' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         お気に入り一覧
                         <span class="text-muted">></span>
                     </a>
