--- a/templates/pages/restaurants_detail.html
+++ b/templates/pages/restaurants_detail.html
@@ -32,13 +32,25 @@
                         </a>
                     </div>
                     <!-- お気に入りアイコン -->
+                    
                     <div class="col-2 text-center">
-                        <form action="https://nagoyameshi-pattern-1.herokuapp.com/favorites/toggle/103" method="post" class="d-flex justify-content-center">
+                        {% if favorites == 0 %}
+                        <form action="{% url 'favorites_toggle01' pk=shop.pk %}" method="post" class="d-flex justify-content-center">
                             <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
+                                {% csrf_token %}
                             <button type="submit" class="btn btn-outline-danger rounded-circle shadow-sm" title="お気に入り登録" style="width: 50px; height: 50px; padding: 0; min-width: 50px;">
                                 <span style="font-size: 1.5rem;">♥</span>
                             </button>
                         </form>
+                        {% else %}                      
+                        <form action="{% url 'favorites_toggle01' pk=shop.pk %}" method="post" class="d-flex justify-content-center">
+                            <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
+                                {% csrf_token %}
+                            <button type="submit" class="btn btn-danger rounded-circle shadow-sm" title="お気に入り解除" style="width: 50px; height: 50px; padding: 0; min-width: 50px;">
+                                <span style="font-size: 1.5rem;">♥</span>
+                            </button>                            
+                        </form>
+                        {% endif %}
                     </div>
                 </div>
                 
@@ -68,10 +80,10 @@
         <div class="tab-pane fade show active" id="info" role="tabpanel" aria-labelledby="info-tab">
             <div class="" style="width: 90%; margin: 10px auto;">
                 <div class="flex mb-4">
-                    <span class="item_btn me-2">#{{shop.category}}</span>
+                    <span class="item_bgbr  me-2">#{{shop.category}}</span>
                     
                     {% for tag in shop.tags.all %}
-                    <span class="item_btn me-2">#{{ tag.name }}</span>
+                    <span class="item_bgbr  me-2">#{{ tag.name }}</span>
                     {% endfor %}
                 </div>
                 <div class="row pb-2 mb-2 border-bottom">
@@ -132,11 +144,21 @@
                 </div>
             </div>
 
-            <div class="mt-4 mb-3">
-                <form action="/" method="post" class="text-center">
+            <!-- お気に入りボタン -->
+            <div class="mt-4 mb-3" id="favorite">
+                {% if favorites == 0 %}
+                <form action="{% url 'favorites_toggle02' pk=shop.pk %}" method="post" class="text-center">
                     <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
-                    <button type="submit" class="btn btn-outline-danger shadow-sm w-50">♥ お気に入り追加</button>
+                        {% csrf_token %}
+                    <button type="submit" class="btn btn-outline-danger shadow-sm w-50">♥ お気に入り登録</button>                       
                 </form>
+                    {% else %}
+                <form action="{% url 'favorites_toggle02' pk=shop.pk %}" method="post" class="text-center">
+                    <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
+                        {% csrf_token %}
+                    <button type="submit" class="btn btn-danger shadow-sm w-50">♥ お気に入り解除</button>
+                </form>
+                {% endif %}
             </div>
         </div>
 
